# SmolBee

./: .gitignore  README.md  agent.py  docker-compose.yml  download_all_models.py  download_model.py  llm_plugin.py  main.py  pyproject.toml  start.sh  start_agent.sh  test_ll.py  tts_plugin.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  agent_server.py  configs.py  pyproject.toml  server.py  token_service.py
backend/core/: agent.py  agent_server.py  configs.py  metrix_collector.py  prime_agent.py  system_prompt.md
backend/plugins/: stt_plugin.py  tts_plugin.py
backend/test/: test_ll.py
backend/utils/: download_all_models.py  token_service.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: VoiceAssistant.jsx
plugins/: llm_plugin.py  tts_plugin.py
